--- a/source/vxLib.vcxproj
+++ b/source/vxLib.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="..\include\vxLib\gl\gl.h" />
     <ClInclude Include="..\include\vxLib\gl\ProgramPipeline.h" />
     <ClInclude Include="..\include\vxLib\gl\RenderContext.h" />
+    <ClInclude Include="..\include\vxLib\gl\ShaderManager.h" />
     <ClInclude Include="..\include\vxLib\gl\ShaderProgram.h" />
     <ClInclude Include="..\include\vxLib\gl\SharedObject.h" />
     <ClInclude Include="..\include\vxLib\gl\StateManager.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="gl\gl_core.cpp" />
     <ClCompile Include="gl\ProgramPipeline.cpp" />
     <ClCompile Include="gl\RenderContext.cpp" />
+    <ClCompile Include="gl\ShaderManager.cpp" />
     <ClCompile Include="gl\ShaderProgram.cpp" />
     <ClCompile Include="gl\SharedObject.cpp" />
     <ClCompile Include="gl\StateManager.cpp" />
