--- a/source/vxLib.vcxproj
+++ b/source/vxLib.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="..\include\vxLib\Allocator\StackAllocator.h" />
     <ClInclude Include="..\include\vxLib\Container\array.h" />
     <ClInclude Include="..\include\vxLib\Container\bitset.h" />
+    <ClInclude Include="..\include\vxLib\Container\DoubleBuffer.h" />
     <ClInclude Include="..\include\vxLib\Container\iterator.h" />
     <ClInclude Include="..\include\vxLib\Container\sorted_array.h" />
     <ClInclude Include="..\include\vxLib\Container\sorted_vector.h" />
