changed simd load function

--- a/source/vxLib.vcxproj.filters
+++ b/source/vxLib.vcxproj.filters
@@ -267,5 +267,8 @@
     <MASM Include="math.asm">
       <Filter>Source Files\math</Filter>
     </MASM>
+    <MASM Include="Vector_dot.asm">
+      <Filter>Source Files\math</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
