--- a/source/vxLib.vcxproj
+++ b/source/vxLib.vcxproj
@@ -210,6 +210,7 @@
       <FileType>Document</FileType>
     </None>
     <MASM Include="math.asm" />
+    <MASM Include="Vector_dot.asm" />
     <MASM Include="Vector_Basic.asm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
