--- a/source/vxLib.vcxproj
+++ b/source/vxLib.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="..\include\vxLib\gl\wgl_core.h" />
     <ClInclude Include="..\include\vxLib\Graphics\Camera.h" />
     <ClInclude Include="..\include\vxLib\Graphics\Mesh.h" />
+    <ClInclude Include="..\include\vxLib\Keyboard.h" />
     <ClInclude Include="..\include\vxLib\math\math.h" />
     <ClInclude Include="..\include\vxLib\math\matrix.h" />
     <ClInclude Include="..\include\vxLib\math\Vector.h" />
@@ -171,6 +172,7 @@
     <ClInclude Include="..\include\vxLib\type_traits.h" />
     <ClInclude Include="..\include\vxLib\util\CityHash.h" />
     <ClInclude Include="..\include\vxLib\util\DebugPrint.h" />
+    <ClInclude Include="..\include\vxLib\util\memcpy.h" />
     <ClInclude Include="..\include\vxLib\util\streamHelper.h" />
     <ClInclude Include="..\include\vxLib\Window.h" />
   </ItemGroup>
