--- a/source/vxLib.vcxproj
+++ b/source/vxLib.vcxproj
@@ -141,7 +141,8 @@
     <ClInclude Include="..\include\vxLib\Container\sorted_array.h" />
     <ClInclude Include="..\include\vxLib\Container\sorted_vector.h" />
     <ClInclude Include="..\include\vxLib\Container\vector.h" />
-    <ClInclude Include="..\include\vxLib\File.h" />
+    <ClInclude Include="..\include\vxLib\File\File.h" />
+    <ClInclude Include="..\include\vxLib\File\FileHeader.h" />
     <ClInclude Include="..\include\vxLib\gl\Base.h" />
     <ClInclude Include="..\include\vxLib\gl\Buffer.h" />
     <ClInclude Include="..\include\vxLib\gl\Debug.h" />
