--- a/source/vxLib.vcxproj.filters
+++ b/source/vxLib.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="..\include\vxLib\File\FileHeader.h">
       <Filter>Header Files\File</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\vxLib\memory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CityHash.cpp">
