--- a/source/vxLib.vcxproj.filters
+++ b/source/vxLib.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="Source Files\math">
       <UniqueIdentifier>{8cb24193-f227-4c36-a982-57d9b6976966}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\thread">
+      <UniqueIdentifier>{9c87bd47-a631-4f73-8bfd-b3f3e40c54c0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\vxLib\ScopeGuard.h">
@@ -189,11 +192,14 @@
     <ClInclude Include="..\include\vxLib\File\FileHandle.h">
       <Filter>Header Files\File</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\vxLib\Semaphore.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\include\vxLib\thread\AutoResetEvent.h">
+      <Filter>Header Files\thread</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\vxLib\AutoResetEvent.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\include\vxLib\thread\Semaphore.h">
+      <Filter>Header Files\thread</Filter>
+    </ClInclude>
+    <ClInclude Include="thread.h">
+      <Filter>Header Files\thread</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
