--- a/source/vxLib.vcxproj
+++ b/source/vxLib.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="..\include\vxLib\stb_image.h" />
     <ClInclude Include="..\include\vxLib\stb_image_write.h" />
     <ClInclude Include="..\include\vxLib\StringID.h" />
+    <ClInclude Include="..\include\vxLib\TextPreprocessor.h" />
     <ClInclude Include="..\include\vxLib\thread\AutoResetEvent.h" />
     <ClInclude Include="..\include\vxLib\thread\Semaphore.h" />
     <ClInclude Include="..\include\vxLib\types.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="StackAllocator.cpp" />
     <ClCompile Include="stb_image.c" />
     <ClCompile Include="stb_image_write.c" />
+    <ClCompile Include="TextPreprocessor.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
